--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,14 @@
+
+body
+{
+    padding: 10px !important;
+}
+
 #main
 {
     min-width: 600px;
-    padding: 10px;
+    overflow: hidden;
+    padding: 10px !important;
 }
 
 #searchForm
@@ -36,25 +43,31 @@
 }
 
 
-#listHolder::-webkit-scrollbar-track
+::-webkit-scrollbar-track
 {
 	background-color: #F5F5F5;
     border-radius: 10px;
 }
 
-#listHolder::-webkit-scrollbar
+::-webkit-scrollbar
 {
 	width: 10px;
 	background-color: #F5F5F5;
     border-radius: 10px;
 }
 
-#listHolder::-webkit-scrollbar-thumb
+::-webkit-scrollbar-thumb
 {
 	background-color: #adb5bd;
     border-radius: 8px;
 }
 
+
 #versionDropDown {
+    text-align: center;
     transform: translate(350px, -5px) !important;
+    min-width: 6rem;
+    max-height: 250px;
+    overflow: hidden;
+    overflow-y: scroll;
 }
